[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/anima/icons/Play.svg" type="Texture" id=1]
[ext_resource path="res://addons/anima/icons/Add.svg" type="Texture" id=2]
[ext_resource path="res://addons/anima/icons/Remove.svg" type="Texture" id=3]
[ext_resource path="res://addons/anima/fonts/Lato-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/anima/components/AnimaButton.gd" type="Script" id=5]
[ext_resource path="res://addons/anima/shapes/Rectangle.gd" type="Script" id=6]
[ext_resource path="res://addons/anima/icons/Key.svg" type="Texture" id=7]
[ext_resource path="res://addons/anima/ui/editor/AnimaFrameAnimation.gd" type="Script" id=8]
[ext_resource path="res://addons/anima/ui/property/AnimaPropertyFromTo.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/anima/icons/Time.svg" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.239216, 0.235294, 0.254902, 0.223529 )

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 4 )
__meta__ = {
"_original_size": 18
}

[node name="FrameAnimation" type="Control"]
anchor_bottom = 1.0
margin_right = 360.395
rect_min_size = Vector2( 360, 0 )
rect_pivot_offset = Vector2( 180, 300 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rectangle" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 360, 0 )
rect_pivot_offset = Vector2( 180, 300 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.129412, 0.133333, 0.176471, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 24.0
Rectangle/Border/Radius/TopRight = 24.0
Rectangle/Border/Radius/BottomRight = 24.0
Rectangle/Border/Radius/BottomLeft = 24.0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="MarginContainer" type="MarginContainer" parent="Rectangle"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentContainer" type="VBoxContainer" parent="Rectangle/MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 336.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Rectangle/MarginContainer/ContentContainer"]
margin_right = 312.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( 156, 16 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameName" parent="Rectangle/MarginContainer/ContentContainer/HBoxContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
margin_right = 276.0
rect_pivot_offset = Vector2( 142, 19 )
show_relative_selector = false
borderless = true

[node name="PlayContainer" type="CenterContainer" parent="Rectangle/MarginContainer/ContentContainer/HBoxContainer"]
margin_left = 280.0
margin_right = 312.0
margin_bottom = 32.0

[node name="AnimaButton" type="Control" parent="Rectangle/MarginContainer/ContentContainer/HBoxContainer/PlayContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
mouse_default_cursor_shape = 2
script = ExtResource( 5 )
Animation/AnimatePropertyChange = false
Animation/Speed = 0.15
Animation/Easing = 0
Button/Label = ""
Button/Align = 0
Button/VAlign = 0
Button/Font = null
Button/ToggleMode = false
Normal/FillColor = Color( 0.192157, 0.270588, 0.411765, 1 )
Normal/FontColor = Color( 1, 1, 1, 1 )
Hovered/UseSameStyleOf = ""
Hovered/FillColor = Color( 0.384314, 0.541176, 0.819608, 1 )
Hovered/FontColor = Color( 1, 1, 1, 0 )
Hovered/Scale = Vector2( 1, 1 )
Pressed/UseSameStyleOf = ""
Pressed/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Pressed/FontColor = Color( 1, 1, 1, 0 )
Focused/UseSameStyleOf = ""
Focused/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Focused/FontColor = Color( 1, 1, 1, 0 )
Normal/Size = Rect2( 0, 0, 100, 100 )
Hovered/Size = Rect2( -1, -1, -1, -1 )
Focused/Size = Rect2( -1, -1, -1, -1 )
Pressed/Size = Rect2( -1, -1, -1, -1 )
Normal/Border/Color = Color( 1, 1, 1, 0 )
Hovered/Border/Color = Color( 1, 1, 1, 0.01 )
Focused/Border/Color = Color( 1, 1, 1, 0.01 )
Pressed/Border/Color = Color( 1, 1, 1, 0.01 )
Normal/Border/Blend = false
Hovered/Border/Blend = false
Focused/Border/Blend = false
Pressed/Border/Blend = false
Normal/Border/Offset = Vector2( 0, 0 )
Hovered/Border/Offset = Vector2( -1, -1 )
Focused/Border/Offset = Vector2( -1, -1 )
Pressed/Border/Offset = Vector2( -1, -1 )
Normal/Border/Widh/Left = 0
Hovered/Border/Widh/Left = -1
Focused/Border/Widh/Left = -1
Pressed/Border/Widh/Left = -1
Normal/Border/Widh/Top = 0
Hovered/Border/Widh/Top = -1
Focused/Border/Widh/Top = -1
Pressed/Border/Widh/Top = -1
Normal/Border/Widh/Right = 0
Hovered/Border/Widh/Right = -1
Focused/Border/Widh/Right = -1
Pressed/Border/Widh/Right = -1
Normal/Border/Widh/Bottom = 0
Hovered/Border/Widh/Bottom = -1
Focused/Border/Widh/Bottom = -1
Pressed/Border/Widh/Bottom = -1
Normal/Border/Radius/Details = 8
Hovered/Border/Radius/Details = -1
Focused/Border/Radius/Details = -1
Pressed/Border/Radius/Details = -1
Normal/Border/Radius/TopLeft = 8
Hovered/Border/Radius/TopLeft = -1
Focused/Border/Radius/TopLeft = -1
Pressed/Border/Radius/TopLeft = -1
Normal/Border/Radius/TopRight = 8
Hovered/Border/Radius/TopRight = -1
Focused/Border/Radius/TopRight = -1
Pressed/Border/Radius/TopRight = -1
Normal/Border/Radius/BottomRight = 8
Hovered/Border/Radius/BottomRight = -1
Focused/Border/Radius/BottomRight = -1
Pressed/Border/Radius/BottomRight = -1
Normal/Border/Radius/BottomLeft = 8
Hovered/Border/Radius/BottomLeft = -1
Focused/Border/Radius/BottomLeft = -1
Pressed/Border/Radius/BottomLeft = -1
Normal/Border/Offset/Radius/Details = 8
Hovered/Border/Offset/Radius/Details = -1
Focused/Border/Offset/Radius/Details = -1
Pressed/Border/Offset/Radius/Details = -1
Normal/Border/Offset/Radius/TopLeft = -1
Hovered/Border/Offset/Radius/TopLeft = -1
Focused/Border/Offset/Radius/TopLeft = -1
Pressed/Border/Offset/Radius/TopLeft = -1
Normal/Border/Offset/Radius/TopRight = -1
Hovered/Border/Offset/Radius/TopRight = -1
Focused/Border/Offset/Radius/TopRight = -1
Pressed/Border/Offset/Radius/TopRight = -1
Normal/Border/Offset/Radius/BottomRight = -1
Hovered/Border/Offset/Radius/BottomRight = -1
Focused/Border/Offset/Radius/BottomRight = -1
Pressed/Border/Offset/Radius/BottomRight = -1
Normal/Border/Offset/Radius/BottomLeft = -1
Hovered/Border/Offset/Radius/BottomLeft = -1
Focused/Border/Offset/Radius/BottomLeft = -1
Pressed/Border/Offset/Radius/BottomLeft = -1
Normal/Shadow/Color = Color( 0, 0, 0, 0.517647 )
Hovered/Shadow/Color = Color( 1, 1, 1, 0 )
Focused/Shadow/Color = Color( 1, 1, 1, 0 )
Pressed/Shadow/Color = Color( 1, 1, 1, 0 )
Normal/Shadow/Size = 1
Hovered/Shadow/Size = -1
Focused/Shadow/Size = -1
Pressed/Shadow/Size = -1
Normal/Shadow/Offset = Vector2( 1, 1 )
Hovered/Shadow/Offset = Vector2( -1, -1 )
Focused/Shadow/Offset = Vector2( -1, -1 )
Pressed/Shadow/Offset = Vector2( -1, -1 )

[node name="Play" type="Sprite" parent="Rectangle/MarginContainer/ContentContainer/HBoxContainer/PlayContainer/AnimaButton"]
position = Vector2( 8, 8 )
texture = ExtResource( 1 )
centered = false

[node name="DurationContainer" type="MarginContainer" parent="Rectangle/MarginContainer/ContentContainer"]
margin_top = 44.0
margin_right = 312.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 156, 28 )
custom_constants/margin_top = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Rectangle/MarginContainer/ContentContainer/DurationContainer"]
margin_top = 12.0
margin_right = 312.0
margin_bottom = 44.0
custom_constants/separation = 12

[node name="GridContainer" type="HBoxContainer" parent="Rectangle/MarginContainer/ContentContainer/DurationContainer/VBoxContainer"]
margin_right = 312.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 259.281, -180.348 )
custom_constants/separation = 24

[node name="Time" type="Sprite" parent="Rectangle/MarginContainer/ContentContainer/DurationContainer/VBoxContainer/GridContainer"]
position = Vector2( 4.60373, 16.1706 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Rectangle/MarginContainer/ContentContainer/DurationContainer/VBoxContainer/GridContainer"]
margin_top = 9.0
margin_right = 87.0
margin_bottom = 23.0
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
text = "       Duration:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyFromTo" parent="Rectangle/MarginContainer/ContentContainer/DurationContainer/VBoxContainer/GridContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
margin_left = 111.0
margin_right = 312.0
show_relative_selector = false

[node name="ScrollContainer" type="ScrollContainer" parent="Rectangle/MarginContainer/ContentContainer"]
margin_top = 112.0
margin_right = 312.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( 156, 182 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationsContainer" type="VBoxContainer" parent="Rectangle/MarginContainer/ContentContainer/ScrollContainer"]
margin_right = 312.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Empty" type="Control" parent="Rectangle/MarginContainer/ContentContainer"]
margin_top = 488.0
margin_right = 312.0
margin_bottom = 506.0
rect_min_size = Vector2( 0, 18 )
rect_pivot_offset = Vector2( 169, 9 )

[node name="Control" type="Control" parent="Rectangle/MarginContainer/ContentContainer/Empty"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CTAContainer" type="HBoxContainer" parent="Rectangle/MarginContainer/ContentContainer/Empty/Control"]
anchor_right = 1.0
margin_top = -32.0
margin_bottom = 16.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateFrame" type="Control" parent="Rectangle/MarginContainer/ContentContainer/Empty/Control/CTAContainer"]
margin_left = 96.0
margin_right = 144.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 24, 24 )
hint_tooltip = "Add all changes as Animation"
mouse_default_cursor_shape = 2
script = ExtResource( 5 )
Animation/AnimatePropertyChange = false
Animation/Speed = 0.15
Animation/Easing = 0
Button/Label = ""
Button/Align = 1
Button/VAlign = 1
Button/Font = SubResource( 1 )
Button/ToggleMode = true
Normal/FillColor = Color( 0.984314, 0.729412, 0.388235, 1 )
Normal/FontColor = Color( 1, 1, 1, 1 )
Hovered/UseSameStyleOf = ""
Hovered/FillColor = Color( 0.984314, 0.85098, 0.388235, 1 )
Hovered/FontColor = Color( 1, 1, 1, 0 )
Hovered/Scale = Vector2( 1, 1 )
Pressed/UseSameStyleOf = ""
Pressed/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Pressed/FontColor = Color( 1, 1, 1, 0 )
Focused/UseSameStyleOf = ""
Focused/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Focused/FontColor = Color( 1, 1, 1, 0 )
Normal/Size = Rect2( 0, 0, 98, 100 )
Hovered/Size = Rect2( -1, -1, -1, -1 )
Focused/Size = Rect2( -1, -1, -1, -1 )
Pressed/Size = Rect2( -1, -1, -1, -1 )
Normal/Border/Color = Color( 1, 1, 1, 0 )
Hovered/Border/Color = Color( 1, 1, 1, 0.01 )
Focused/Border/Color = Color( 1, 1, 1, 0.01 )
Pressed/Border/Color = Color( 1, 1, 1, 0.01 )
Normal/Border/Blend = false
Hovered/Border/Blend = false
Focused/Border/Blend = false
Pressed/Border/Blend = false
Normal/Border/Offset = Vector2( 0, 0 )
Hovered/Border/Offset = Vector2( -1, -1 )
Focused/Border/Offset = Vector2( -1, -1 )
Pressed/Border/Offset = Vector2( -1, -1 )
Normal/Border/Widh/Left = 0
Hovered/Border/Widh/Left = -1
Focused/Border/Widh/Left = -1
Pressed/Border/Widh/Left = -1
Normal/Border/Widh/Top = 0
Hovered/Border/Widh/Top = -1
Focused/Border/Widh/Top = -1
Pressed/Border/Widh/Top = -1
Normal/Border/Widh/Right = 0
Hovered/Border/Widh/Right = -1
Focused/Border/Widh/Right = -1
Pressed/Border/Widh/Right = -1
Normal/Border/Widh/Bottom = 0
Hovered/Border/Widh/Bottom = -1
Focused/Border/Widh/Bottom = -1
Pressed/Border/Widh/Bottom = -1
Normal/Border/Radius/Details = 20
Hovered/Border/Radius/Details = -1
Focused/Border/Radius/Details = -1
Pressed/Border/Radius/Details = -1
Normal/Border/Radius/TopLeft = 32
Hovered/Border/Radius/TopLeft = -1
Focused/Border/Radius/TopLeft = -1
Pressed/Border/Radius/TopLeft = -1
Normal/Border/Radius/TopRight = 32
Hovered/Border/Radius/TopRight = -1
Focused/Border/Radius/TopRight = -1
Pressed/Border/Radius/TopRight = -1
Normal/Border/Radius/BottomRight = 32
Hovered/Border/Radius/BottomRight = -1
Focused/Border/Radius/BottomRight = -1
Pressed/Border/Radius/BottomRight = -1
Normal/Border/Radius/BottomLeft = 32
Hovered/Border/Radius/BottomLeft = -1
Focused/Border/Radius/BottomLeft = -1
Pressed/Border/Radius/BottomLeft = -1
Normal/Border/Offset/Radius/Details = 8
Hovered/Border/Offset/Radius/Details = -1
Focused/Border/Offset/Radius/Details = -1
Pressed/Border/Offset/Radius/Details = -1
Normal/Border/Offset/Radius/TopLeft = -1
Hovered/Border/Offset/Radius/TopLeft = -1
Focused/Border/Offset/Radius/TopLeft = -1
Pressed/Border/Offset/Radius/TopLeft = -1
Normal/Border/Offset/Radius/TopRight = -1
Hovered/Border/Offset/Radius/TopRight = -1
Focused/Border/Offset/Radius/TopRight = -1
Pressed/Border/Offset/Radius/TopRight = -1
Normal/Border/Offset/Radius/BottomRight = -1
Hovered/Border/Offset/Radius/BottomRight = -1
Focused/Border/Offset/Radius/BottomRight = -1
Pressed/Border/Offset/Radius/BottomRight = -1
Normal/Border/Offset/Radius/BottomLeft = -1
Hovered/Border/Offset/Radius/BottomLeft = -1
Focused/Border/Offset/Radius/BottomLeft = -1
Pressed/Border/Offset/Radius/BottomLeft = -1
Normal/Shadow/Color = Color( 0, 0, 0, 0.517647 )
Hovered/Shadow/Color = Color( 1, 1, 1, 0 )
Focused/Shadow/Color = Color( 1, 1, 1, 0 )
Pressed/Shadow/Color = Color( 1, 1, 1, 0 )
Normal/Shadow/Size = 4
Hovered/Shadow/Size = -1
Focused/Shadow/Size = -1
Pressed/Shadow/Size = -1
Normal/Shadow/Offset = Vector2( 0, 0 )
Hovered/Shadow/Offset = Vector2( -1, -1 )
Focused/Shadow/Offset = Vector2( -1, -1 )
Pressed/Shadow/Offset = Vector2( -1, -1 )

[node name="HBoxContainer" type="CenterContainer" parent="Rectangle/MarginContainer/ContentContainer/Empty/Control/CTAContainer/GenerateFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Rectangle/MarginContainer/ContentContainer/Empty/Control/CTAContainer/GenerateFrame/HBoxContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Icon" type="Sprite" parent="Rectangle/MarginContainer/ContentContainer/Empty/Control/CTAContainer/GenerateFrame/HBoxContainer/Control"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 7 )
centered = false

[node name="AddAnimation" type="Control" parent="Rectangle/MarginContainer/ContentContainer/Empty/Control/CTAContainer"]
margin_left = 168.0
margin_right = 216.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 24, 24 )
mouse_default_cursor_shape = 2
script = ExtResource( 5 )
Animation/AnimatePropertyChange = false
Animation/Speed = 0.15
Animation/Easing = 0
Button/Label = ""
Button/Align = 1
Button/VAlign = 1
Button/Font = SubResource( 1 )
Button/ToggleMode = false
Normal/FillColor = Color( 0.192157, 0.270588, 0.411765, 1 )
Normal/FontColor = Color( 1, 1, 1, 1 )
Hovered/UseSameStyleOf = ""
Hovered/FillColor = Color( 0.278431, 0.376471, 0.552941, 1 )
Hovered/FontColor = Color( 1, 1, 1, 0 )
Hovered/Scale = Vector2( 1, 1 )
Pressed/UseSameStyleOf = ""
Pressed/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Pressed/FontColor = Color( 1, 1, 1, 0 )
Focused/UseSameStyleOf = "Normal"
Focused/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Focused/FontColor = Color( 1, 1, 1, 0 )
Normal/Size = Rect2( 0, 0, 100, 100 )
Hovered/Size = Rect2( -1, -1, -1, -1 )
Focused/Size = Rect2( -1, -1, -1, -1 )
Pressed/Size = Rect2( -1, -1, -1, -1 )
Normal/Border/Color = Color( 1, 1, 1, 0 )
Hovered/Border/Color = Color( 1, 1, 1, 0.01 )
Focused/Border/Color = Color( 1, 1, 1, 0.01 )
Pressed/Border/Color = Color( 1, 1, 1, 0.01 )
Normal/Border/Blend = false
Hovered/Border/Blend = false
Focused/Border/Blend = false
Pressed/Border/Blend = false
Normal/Border/Offset = Vector2( 0, 0 )
Hovered/Border/Offset = Vector2( -1, -1 )
Focused/Border/Offset = Vector2( -1, -1 )
Pressed/Border/Offset = Vector2( -1, -1 )
Normal/Border/Widh/Left = 0
Hovered/Border/Widh/Left = -1
Focused/Border/Widh/Left = -1
Pressed/Border/Widh/Left = -1
Normal/Border/Widh/Top = 0
Hovered/Border/Widh/Top = -1
Focused/Border/Widh/Top = -1
Pressed/Border/Widh/Top = -1
Normal/Border/Widh/Right = 0
Hovered/Border/Widh/Right = -1
Focused/Border/Widh/Right = -1
Pressed/Border/Widh/Right = -1
Normal/Border/Widh/Bottom = 0
Hovered/Border/Widh/Bottom = -1
Focused/Border/Widh/Bottom = -1
Pressed/Border/Widh/Bottom = -1
Normal/Border/Radius/Details = 20
Hovered/Border/Radius/Details = -1
Focused/Border/Radius/Details = -1
Pressed/Border/Radius/Details = -1
Normal/Border/Radius/TopLeft = 32
Hovered/Border/Radius/TopLeft = -1
Focused/Border/Radius/TopLeft = -1
Pressed/Border/Radius/TopLeft = -1
Normal/Border/Radius/TopRight = 32
Hovered/Border/Radius/TopRight = -1
Focused/Border/Radius/TopRight = -1
Pressed/Border/Radius/TopRight = -1
Normal/Border/Radius/BottomRight = 32
Hovered/Border/Radius/BottomRight = -1
Focused/Border/Radius/BottomRight = -1
Pressed/Border/Radius/BottomRight = -1
Normal/Border/Radius/BottomLeft = 32
Hovered/Border/Radius/BottomLeft = -1
Focused/Border/Radius/BottomLeft = -1
Pressed/Border/Radius/BottomLeft = -1
Normal/Border/Offset/Radius/Details = 8
Hovered/Border/Offset/Radius/Details = -1
Focused/Border/Offset/Radius/Details = -1
Pressed/Border/Offset/Radius/Details = -1
Normal/Border/Offset/Radius/TopLeft = -1
Hovered/Border/Offset/Radius/TopLeft = -1
Focused/Border/Offset/Radius/TopLeft = -1
Pressed/Border/Offset/Radius/TopLeft = -1
Normal/Border/Offset/Radius/TopRight = -1
Hovered/Border/Offset/Radius/TopRight = -1
Focused/Border/Offset/Radius/TopRight = -1
Pressed/Border/Offset/Radius/TopRight = -1
Normal/Border/Offset/Radius/BottomRight = -1
Hovered/Border/Offset/Radius/BottomRight = -1
Focused/Border/Offset/Radius/BottomRight = -1
Pressed/Border/Offset/Radius/BottomRight = -1
Normal/Border/Offset/Radius/BottomLeft = -1
Hovered/Border/Offset/Radius/BottomLeft = -1
Focused/Border/Offset/Radius/BottomLeft = -1
Pressed/Border/Offset/Radius/BottomLeft = -1
Normal/Shadow/Color = Color( 0, 0, 0, 0.517647 )
Hovered/Shadow/Color = Color( 1, 1, 1, 0 )
Focused/Shadow/Color = Color( 1, 1, 1, 0 )
Pressed/Shadow/Color = Color( 1, 1, 1, 0 )
Normal/Shadow/Size = 4
Hovered/Shadow/Size = -1
Focused/Shadow/Size = -1
Pressed/Shadow/Size = -1
Normal/Shadow/Offset = Vector2( 0, 0 )
Hovered/Shadow/Offset = Vector2( -1, -1 )
Focused/Shadow/Offset = Vector2( -1, -1 )
Pressed/Shadow/Offset = Vector2( -1, -1 )

[node name="HBoxContainer" type="CenterContainer" parent="Rectangle/MarginContainer/ContentContainer/Empty/Control/CTAContainer/AddAnimation"]
anchor_right = 1.0
anchor_bottom = 1.0
hint_tooltip = "Add new Animation"
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Rectangle/MarginContainer/ContentContainer/Empty/Control/CTAContainer/AddAnimation/HBoxContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Add" type="Sprite" parent="Rectangle/MarginContainer/ContentContainer/Empty/Control/CTAContainer/AddAnimation/HBoxContainer/Control"]
texture = ExtResource( 2 )
centered = false

[node name="RemoveWrapper" type="HBoxContainer" parent="Rectangle/MarginContainer/ContentContainer"]
margin_top = 518.0
margin_right = 312.0
margin_bottom = 552.0
rect_pivot_offset = Vector2( 173.5, 17 )
custom_constants/separation = 24
alignment = 1

[node name="Delete" type="Control" parent="Rectangle/MarginContainer/ContentContainer/RemoveWrapper"]
margin_left = 96.0
margin_right = 216.0
margin_bottom = 34.0
rect_min_size = Vector2( 120, 34 )
rect_pivot_offset = Vector2( 60, 17 )
hint_tooltip = "Remove the frame"
mouse_default_cursor_shape = 2
script = ExtResource( 5 )
Animation/AnimatePropertyChange = false
Animation/Speed = 0.15
Animation/Easing = 0
Button/Label = ""
Button/Align = 1
Button/VAlign = 1
Button/Font = SubResource( 1 )
Button/ToggleMode = false
Normal/FillColor = Color( 0.47451, 0.211765, 0.196078, 1 )
Normal/FontColor = Color( 1, 1, 1, 1 )
Hovered/UseSameStyleOf = ""
Hovered/FillColor = Color( 0.635294, 0.309804, 0.290196, 1 )
Hovered/FontColor = Color( 1, 1, 1, 0 )
Hovered/Scale = Vector2( 1, 1 )
Pressed/UseSameStyleOf = ""
Pressed/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Pressed/FontColor = Color( 1, 1, 1, 0 )
Focused/UseSameStyleOf = ""
Focused/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Focused/FontColor = Color( 1, 1, 1, 0 )
Normal/Size = Rect2( 0, 0, 100, 100 )
Hovered/Size = Rect2( -1, -1, -1, -1 )
Focused/Size = Rect2( -1, -1, -1, -1 )
Pressed/Size = Rect2( -1, -1, -1, -1 )
Normal/Border/Color = Color( 1, 1, 1, 0 )
Hovered/Border/Color = Color( 1, 1, 1, 0.01 )
Focused/Border/Color = Color( 1, 1, 1, 0.01 )
Pressed/Border/Color = Color( 1, 1, 1, 0.01 )
Normal/Border/Blend = false
Hovered/Border/Blend = false
Focused/Border/Blend = false
Pressed/Border/Blend = false
Normal/Border/Offset = Vector2( 0, 0 )
Hovered/Border/Offset = Vector2( -1, -1 )
Focused/Border/Offset = Vector2( -1, -1 )
Pressed/Border/Offset = Vector2( -1, -1 )
Normal/Border/Widh/Left = 0
Hovered/Border/Widh/Left = -1
Focused/Border/Widh/Left = -1
Pressed/Border/Widh/Left = -1
Normal/Border/Widh/Top = 0
Hovered/Border/Widh/Top = -1
Focused/Border/Widh/Top = -1
Pressed/Border/Widh/Top = -1
Normal/Border/Widh/Right = 0
Hovered/Border/Widh/Right = -1
Focused/Border/Widh/Right = -1
Pressed/Border/Widh/Right = -1
Normal/Border/Widh/Bottom = 0
Hovered/Border/Widh/Bottom = -1
Focused/Border/Widh/Bottom = -1
Pressed/Border/Widh/Bottom = -1
Normal/Border/Radius/Details = 8
Hovered/Border/Radius/Details = -1
Focused/Border/Radius/Details = -1
Pressed/Border/Radius/Details = -1
Normal/Border/Radius/TopLeft = 8
Hovered/Border/Radius/TopLeft = -1
Focused/Border/Radius/TopLeft = -1
Pressed/Border/Radius/TopLeft = -1
Normal/Border/Radius/TopRight = 8
Hovered/Border/Radius/TopRight = -1
Focused/Border/Radius/TopRight = -1
Pressed/Border/Radius/TopRight = -1
Normal/Border/Radius/BottomRight = 8
Hovered/Border/Radius/BottomRight = -1
Focused/Border/Radius/BottomRight = -1
Pressed/Border/Radius/BottomRight = -1
Normal/Border/Radius/BottomLeft = 8
Hovered/Border/Radius/BottomLeft = -1
Focused/Border/Radius/BottomLeft = -1
Pressed/Border/Radius/BottomLeft = -1
Normal/Border/Offset/Radius/Details = 8
Hovered/Border/Offset/Radius/Details = -1
Focused/Border/Offset/Radius/Details = -1
Pressed/Border/Offset/Radius/Details = -1
Normal/Border/Offset/Radius/TopLeft = -1
Hovered/Border/Offset/Radius/TopLeft = -1
Focused/Border/Offset/Radius/TopLeft = -1
Pressed/Border/Offset/Radius/TopLeft = -1
Normal/Border/Offset/Radius/TopRight = -1
Hovered/Border/Offset/Radius/TopRight = -1
Focused/Border/Offset/Radius/TopRight = -1
Pressed/Border/Offset/Radius/TopRight = -1
Normal/Border/Offset/Radius/BottomRight = -1
Hovered/Border/Offset/Radius/BottomRight = -1
Focused/Border/Offset/Radius/BottomRight = -1
Pressed/Border/Offset/Radius/BottomRight = -1
Normal/Border/Offset/Radius/BottomLeft = -1
Hovered/Border/Offset/Radius/BottomLeft = -1
Focused/Border/Offset/Radius/BottomLeft = -1
Pressed/Border/Offset/Radius/BottomLeft = -1
Normal/Shadow/Color = Color( 0, 0, 0, 0.517647 )
Hovered/Shadow/Color = Color( 1, 1, 1, 0 )
Focused/Shadow/Color = Color( 1, 1, 1, 0 )
Pressed/Shadow/Color = Color( 1, 1, 1, 0 )
Normal/Shadow/Size = 1
Hovered/Shadow/Size = -1
Focused/Shadow/Size = -1
Pressed/Shadow/Size = -1
Normal/Shadow/Offset = Vector2( 2, 2 )
Hovered/Shadow/Offset = Vector2( -1, -1 )
Focused/Shadow/Offset = Vector2( -1, -1 )
Pressed/Shadow/Offset = Vector2( -1, -1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Rectangle/MarginContainer/ContentContainer/RemoveWrapper/Delete"]
margin_left = 19.0
margin_top = 7.0
margin_right = 72.0
margin_bottom = 27.0
mouse_filter = 2
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Rectangle/MarginContainer/ContentContainer/RemoveWrapper/Delete/HBoxContainer"]
margin_right = 16.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Rectangle/MarginContainer/ContentContainer/RemoveWrapper/Delete/HBoxContainer/CenterContainer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 18.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Remove" type="Sprite" parent="Rectangle/MarginContainer/ContentContainer/RemoveWrapper/Delete/HBoxContainer/CenterContainer/Control"]
texture = ExtResource( 3 )
centered = false

[node name="Label" type="Label" parent="Rectangle/MarginContainer/ContentContainer/RemoveWrapper/Delete/HBoxContainer"]
margin_left = 24.0
margin_right = 76.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Remove"
align = 1
valign = 1

[connection signal="pressed" from="Rectangle/MarginContainer/ContentContainer/Empty/Control/CTAContainer/AddAnimation" to="." method="_on_AddAnimation_pressed"]
[connection signal="pressed" from="Rectangle/MarginContainer/ContentContainer/RemoveWrapper/Delete" to="." method="_on_Delete_pressed"]
